# Zero

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Zero.pro
Include/: Matrix3.h  Vector2.h
Source/: Matrix3.cpp  Matrix4.cpp  Radian.cpp  main.cpp
include/animation/: AnimationSystem.hpp
include/component/: Animator.hpp  Camera.hpp  Component.hpp  Light.hpp  Material.hpp  Mesh.hpp  ModelInstance.hpp  PrimitiveInstance.hpp  Shapes.hpp  SkyDome.hpp  Transform.hpp  Volume.hpp
include/components/: Camera.hpp  Light.hpp  Material.hpp  ModelInstance.hpp  PrimitiveInstance.hpp  Shapes.hpp  Transform.hpp  Volume.hpp
include/core/: AssetManager.hpp  Component.hpp  CoreEngine.hpp  Engine.hpp  EngineConfig.hpp  EngineCore.hpp  EngineWindow.h  Event.hpp  EventBus.hpp  EventHandler.hpp  FileManager.hpp  GameSystem.hpp  IEntityInstantiator.hpp  Input.hpp  KeyCode.hpp  Logger.hpp  MouseButton.hpp  NonCopyable.hpp  RenderSystemConfig.hpp  System.hpp  TimeDelta.hpp  Transform.hpp  TransformPropagator.hpp  TransformSystem.hpp  WindowConfig.hpp  ZBase.hpp  ZPlatform.hpp  ZeroBase.hpp  ZeroDefines.hpp
include/ecs/: Component.hpp  Entity.hpp  EntityManager.hpp  Registry.hpp  System.hpp
include/engine/: Engine.hpp  EngineConfig.hpp  EntityInstantiator.hpp  RenderSystemConfig.hpp  WindowConfig.hpp
include/event/: Event.hpp  EventBus.hpp  EventHandler.hpp  EventType.hpp  SystemEvent.hpp  UIEvent.hpp  WindowEvent.hpp
resources/: ZeroUML.mdj
src/: CMakeLists.txt  DemoGameSystem.hpp  Main.cpp  main.cpp
src/animation/: AnimationSystem.cpp
src/component/: Animator.cpp  Camera.cpp  Component.cpp  Light.cpp  Material.cpp  PrimitiveInstance.cpp  Shapes.cpp  SkyDome.cpp  Transform.cpp  Volume.cpp
src/components/: Camera.cpp  Light.cpp  Material.cpp  PrimitiveInstance.cpp  Shapes.cpp  Transform.cpp  Volume.cpp
src/core/: AssetManager.cpp  Engine.cpp  EventBus.cpp  FileManager.cpp  Input.cpp  Logger.cpp  System.cpp  Transform.cpp  TransformPropagator.cpp  TransformSystem.cpp
src/engine/: Engine.cpp  EntityInstantiator.cpp
src/event/: EventBus.cpp  EventHandler.cpp
src/math/: Box.cpp  Intersection.cpp  Matrix3.cpp  Matrix3x3.cpp  Matrix4.cpp  Matrix4x4.cpp  Plane.cpp  Quaternion.cpp  Radian.cpp  Sphere.cpp
src/memory/: PoolAllocator.cpp
src/render/: AssimpLoader.cpp  Camera.cpp  CascadedShadowMap.cpp  Components.cpp  CullingManager.cpp  EntityFactory.cpp  EntityPrototype.cpp  Frustrum.cpp  IMesh.cpp  Image.cpp  Instantiator.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshData.cpp  MeshGenerator.cpp  Model.cpp  ModelLoader.cpp  Node.cpp  Optimizer.cpp  OrthographicViewVolume.cpp  PerspectiveViewVolume.cpp  PrimitiveInstance.cpp  Propagator.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderSystem.cpp  Shapes.cpp  Skeleton.cpp  ViewVolumeBuilder.cpp  Volume.cpp  VolumePropagator.cpp  Window.cpp
src/render/opengl/: GLAssetImportWrapper.cpp  GLCompiler.cpp  GLDefaultShader.cpp  GLInstantiator.cpp  GLMesh.cpp  GLModel.cpp  GLModelManager.cpp  GLPrimitiveGenerator.cpp  GLPrimitiveMeshManager.cpp  GLProgram.cpp  GLRenderer.cpp  GLRenderingContext.cpp  GLSampler.cpp  GLShader.cpp  GLTexture.cpp  GLTextureManager.cpp  GLUniformManager.cpp
src/render/opengl/pipeline/: GLEntityRenderPass.cpp  GLShadowMapPass.cpp  GLSkyDomePass.cpp
src/render/pipeline/: EntityRenderPass.cpp  ShadowMapPass.cpp  SkyDomePass.cpp
src/render/renderer/: CascadedShadowMap.cpp  DrawCallComparator.cpp  IMesh.cpp  Image.cpp  MeshGenerator.cpp  Model.cpp  RenderPipeline.cpp  RenderQueue.cpp  RenderStage.cpp  RenderingPipeline.cpp  UniformManager.cpp
src/render/renderer/drawcall/: EntityDrawCall.cpp  ShadowMapDrawCall.cpp  SkyDomeDrawCall.cpp
src/render/renderer/opengl/: GLFrameBuffer.cpp  GLMesh.cpp  GLModel.cpp  GLModelManager.cpp  GLPrimitiveGenerator.cpp  GLProgram.cpp  GLRenderHardware.cpp  GLRenderTarget.cpp  GLRenderingContext.cpp  GLRenderingManager.cpp  GLSampler.cpp  GLShader.cpp  GLShaderManager.cpp  GLTexture.cpp  GLTextureManager.cpp  GLUniformBuffer.cpp  GLUniformManager.cpp  glew.c
src/render/renderer/opengl/ubo/: GLBaseUniformBuffer.cpp  GLBoneUniformBuffer.cpp  GLCameraUniformBuffer.cpp  GLDirectionalLightUniformBuffer.cpp  GLLightInfoUniformBuffer.cpp  GLMaterialUniformBuffer.cpp  GLModelUniformBuffer.cpp  GLPointLightUniformBuffer.cpp  GLShadowMapUniformBuffer.cpp  GLSpotLightUniformBuffer.cpp
src/render/renderer/pipeline/: EntityRenderStage.cpp  ShadowMapStage.cpp  SkyDomeStage.cpp
src/render/renderer/renderpass/: CascadedShadowMapRenderPass.cpp  EntityRenderPass.cpp
src/render/scene/: CullingManager.cpp  OrthographicViewVolume.cpp  PerspectiveViewVolume.cpp  RenderView.cpp  Renderable.cpp  SceneManager.cpp  ViewVolumeBuilder.cpp
test/: CMakeLists.txt  TestMain.cpp
test/include/: TestPropagator.hpp  TestRegistry.hpp  TestTransformPropagator.hpp  TestVolumePropagator.hpp
test/include/render/opengl/: TestGLCompiler.hpp  TestGLProgram.hpp  TestGLShader.hpp  TestGLTexture.hpp  TestWindow.hpp
test/include/render/renderer/opengl/: TestGLCompiler.hpp  TestGLProgram.hpp  TestGLShader.hpp  TestGLTexture.hpp
test/math/: AngleTests.cpp  BoxTests.cpp  IntersectionTests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  PlaneTests.cpp  QuaternionTests.cpp  SphereTests.cpp  VectorTests.cpp
test/src/: TestRegistry.cpp
test/src/component/: CameraTests.cpp  ShapeTests.cpp  TransformTests.cpp
test/src/components/: CameraTests.cpp  ShapeTests.cpp  TransformTests.cpp
test/src/core/: TransformPropagatorTests.cpp  TransformTests.cpp
test/src/math/: AngleTests.cpp  BoxTests.cpp  IntersectionTests.cpp  Matrix3x3Tests.cpp  Matrix4x4Tests.cpp  PlaneTests.cpp  QuaternionTests.cpp  SphereTests.cpp  VectorTests.cpp
test/src/render/: CameraTests.cpp  OrthographicViewVolumeTests.cpp  PerspectiveViewVolumeTests.cpp  PropagatorTests.cpp  ShapeTests.cpp  VolumePropagatorTests.cpp
test/src/render/opengl/: GLCompilerTests.cpp  GLProgramTests.cpp  GLShaderTests.cpp  GLTextureTests.cpp
test/src/render/renderer/opengl/: GLCompilerTests.cpp  GLProgramTests.cpp  GLShaderTests.cpp  GLTextureTests.cpp
(+212 files in other folders)
